# opencv3test

./: README.md  replace_space.php
svm/: CMakeCache.txt  CMakeLists.txt  Makefile  RawDataLabel0.txt  cmake_install.cmake  noiseData.txt  stepSVM.xml  stepplane.txt  svm  svmpredicker  svmpredicker.cpp  svmtrainer  svmtrainer.cpp
